improve validation, added image api marker uris